main menu structure & style updated

--- a/index.html
+++ b/index.html
@@ -27,87 +27,441 @@
             <span class="icon-bar icon-bar-2"></span>
             <span class="icon-bar icon-bar-3"></span>
         </button>
-
-        <div class="main-menu">
-            <ul>
-                <li class="active"><a href="#" title="home">home<span class="sr-only">(current)</span></a></li>
-                <li><a href="#" title="Standhouders">Standhouders</a></li>
-                <li><a href="#" title="Plattegrond">Plattegrond</a></li>
-                <li><a href="#" title="Plattegrond">Plattegrond</a></li>
-            </ul>
-        </div>
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="main container">
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-    <p>asd</p>
-
+<div class="main-menu">
+    <ul class="onepage-pagination">
+        <li><a href="#home" title="home">home</a></li>
+        <li><a href="#about" title="about">about</a></li>
+        <li><a href="#experiance" title="experiance">experiance</a></li>
+        <li><a href="#skills" title="skills">skills</a></li>
+        <li><a href="#portfolio" title="portfolio">portfolio</a></li>
+        <li><a href="#education" title="education">education</a></li>
+        <li><a href="#contact" title="contact">contact</a></li>
+    </ul>
 </div>
 
-<footer>
-</footer>
+<section id="home">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>home</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>about</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="experiance">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>exp</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="skills">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>skills</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="portfolio">
+        <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>port</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="education">
+        <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>education</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact">
+        <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>cont</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+                <p>asd</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="components/jquery/dist/jquery.min.js"></script>
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
