--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <nav>
-    <div class="container">
+    <div class="container-fluid">
         <button type="button" class="navbar-toggle">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar icon-bar-1"></span>
@@ -30,16 +30,22 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="main-menu">
-    <ul class="onepage-pagination">
-        <li><a href="#home" title="home">home</a></li>
-        <li><a href="#about" title="about">about</a></li>
-        <li><a href="#experiance" title="experiance">experiance</a></li>
-        <li><a href="#skills" title="skills">skills</a></li>
-        <li><a href="#portfolio" title="portfolio">portfolio</a></li>
-        <li><a href="#education" title="education">education</a></li>
-        <li><a href="#contact" title="contact">contact</a></li>
-    </ul>
+<div class="navigation">
+    <div class="wrapper">
+        <div class="overlay"></div>
+        <div class="main-menu">
+            <ul class="">
+                <li><a href="#home" title="home">home</a></li>
+                <li><a href="#about" title="about">about</a></li>
+                <li><a href="#experiance" title="experiance">experiance</a></li>
+                <li><a href="#skills" title="skills">skills</a></li>
+                <li><a href="#portfolio" title="portfolio">portfolio</a></li>
+                <li><a href="#education" title="education">education</a></li>
+                <li><a href="#contact" title="contact">contact</a></li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 <section id="home">
