project setup on linux

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <p>home</p>
-                <p>asd</p>
+                <p>temp: change on diff machine, diff env</p>
                 <p>asd</p>
                 <p>asd</p>
                 <p>asd</p>
