checking ssh connection from ubuntu as guest OS

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-xs-12">
                 <p>home</p>
                 <p>temp: change on diff machine, diff env</p>
-                <p>asd</p>
+                <p>checked ssh connection on guest linux</p>
                 <p>asd</p>
                 <p>asd</p>
                 <p>asd</p>
