--- a/template1/index.html
+++ b/template1/index.html
@@ -6,9 +6,43 @@
 </head>
 <body>
 
-<<<<<<< HEAD
-template one
-=======
->>>>>>> d1802192248d923956a756923779fff8f3e24f61
+<!-- navbar -->
+<nav>
+    <div class="wrapper-outer">
+        <div class="wrapper-inner">
+
+            <!-- brand logo and name -->
+            <div class="brand">
+                <a href="#">
+                    <img src="assets/img/" alt="Brand logo"/>
+                    <span>Brand name</span>
+                </a>
+            </div>
+
+            <!-- open-menu button -->
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar icon-bar-1"></span>
+                <span class="icon-bar icon-bar-2"></span>
+                <span class="icon-bar icon-bar-3"></span>
+            </button>
+
+            <!-- main menu items -->
+            <div class="main-menu">
+                <ul class="">
+                    <li><a href="#home" title="home">home</a></li>
+                    <li><a href="#about" title="about">about</a></li>
+                    <li><a href="#experiance" title="experiance">experiance</a></li>
+                    <li><a href="#skills" title="skills">skills</a></li>
+                    <li><a href="#portfolio" title="portfolio">portfolio</a></li>
+                    <li><a href="#education" title="education">education</a></li>
+                    <li><a href="#contact" title="contact">contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+</nav>
+
 </body>
 </html>
