--- a/template1/index.html
+++ b/template1/index.html
@@ -44,5 +44,19 @@
     </div>
 </nav>
 
+<div id="home" class="section"></div>
+
+<div id="about" class="section"></div>
+
+<div id="experiance" class="section"></div>
+
+<div id="skills" class="section"></div>
+
+<div id="portfolio" class="section"></div>
+
+<div id="education" class="section"></div>
+
+<div id="contact" class="section"></div>
+
 </body>
 </html>
