main index - theme 1 taken into account

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <p>home</p>
+                <p>
+                    <a href="template1/index.html">template1</a>
+                </p>
                 <p>temp: change on diff machine, diff env</p>
                 <p>checked ssh connection on guest linux</p>
                 <p>asd</p>
