changes to main index 1

--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
                 </p>
                 <p>temp: change on diff machine, diff env</p>
                 <p>checked ssh connection on guest linux</p>
+
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="panel-group">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#collapse1">Collapsible panel</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse1" class="panel-collapse collapse">
+                                    <div class="panel-body">Panel Body</div>
+                                    <div class="panel-footer">Panel Footer</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <p>asd</p>
                 <p>asd</p>
                 <p>asd</p>
