new sideproject :D omg hahahaha

--- a/index.html
+++ b/index.html
@@ -20,14 +20,42 @@
 <body>
 
 <div class="main">
-    <section>
-        <p class="text">dobro jutro nataša</p>
 
-
+    <section class="slide-1">
+        <p class="text1">Dobro jutro</p>
+        <p class="text2">Nataša</p>
+        <div class="scroll">
+            <span>skroluj dole</span>
+            <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+        </div>
     </section>
-    <section>
 
+    <section class="slide-2">
+        <p class="text1">nadam se da si se naspavala</p>
+        <p class="text2">i da je dan počeo kako treba</p>
+    </section>
 
+    <section class="slide-3">
+        <p class="text1">i da misliš na isto što i ja</p>
+        <div>
+            <img src="img/slide-3.png" alt=""/>
+        </div>
+        <p class="text2">jer...</p>
+    </section>
+
+    <section class="slide-4">
+        <p class="text1">...jednom davno, doživio sam nešto što nikada neću zaboraviti</p>
+        <p class="text2">a sada...</p>
+    </section>
+
+    <section class="slide-5">
+        <p class="text1">...sam upoznao zanimljivu osobu :)</p>
+        <p class="text2">sa kojom želim da podijelim to iskustvo jer...</p>
+    </section>
+
+    <section class="slide-6">
+        <p class="text1">...fino je vidjeti sjaj u oku drage osobe koja je upravo ispunila svoju fantaziju!</p>
+        <p class="text2">tvoj Kolega</p>
     </section>
 
 </div>
