--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<meta name="msapplication-config" content="assets/img/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<title>Rent-a-car Ral auto - Prijedor - Kozarac</title>
-	<link href="assets/css/main.css" type="text/css" rel="stylesheet">
+	<link href="assets/less/main.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/components/font-awesome/css/font-awesome.css">
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700|Roboto:400,500' rel='stylesheet' type='text/css'>
 </head>
@@ -52,13 +52,20 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="#onama"><i class="fa fa-user"></i>O Nama</a></li>
-				<li><a href="#ponuda"><i class="fa fa-car"></i>Ponuda</a></li>
-				<li><a href="#kontakt"><i class="fa fa-phone"></i>Kontakt</a></li>
+				<li class="active"><a href="#onama">O Nama</a></li>
+				<li><a href="#prodaja-vozila">Prodaja vozila</a></li>
+				<li><a href="#rent-a-car">Rent a car</a></li>
+				<li><a href="#slep-sluzba">Šlep služba</a></li>
+				<li><a href="#sobe-prenociste">Sobe - prenoćište</a></li>
+				<li><a href="#caffebar-ellite">Caffe bar Ellite</a></li>
+				<li><a href="#pizzeria-ellite">Pizzeria Ellite</a></li>
+				<li><a href="#kontakt">Kontakt</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
+
+
 <section id="onama">
 	<div class="container">
 		<div class="row">
@@ -69,7 +76,8 @@
 
 
 				<!-- naslov sekcije "o nama" -->
-				<h1>O nama</h1>
+				<h1>O na</h1>
+				<h1>O na</h1>
 
 
 			</div>
@@ -90,6 +98,16 @@
 				</ul>
 
 
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="prodaja-vozila">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				asdasdasdasd
 			</div>
 		</div>
 	</div>
