--- a/index.html
+++ b/index.html
@@ -69,34 +69,7 @@
 <section id="onama">
 	<div class="container">
 		<div class="row">
-			<div class="logo">
-				<img class="big-logo" src="assets/img/logo-big-2.svg" alt="Logo"/>
-			</div>
-			<div class="naslov layer-2">
-
-
-				<!-- naslov sekcije "o nama" -->
-				<h1>O na</h1>
-				<h1>O na</h1>
-
-
-			</div>
-			<div class="tekst layer-1">
-
-				<!-- tekst sekcije "o nama" -->
-				<p>Preduzetnička radnja RAL AUTO - Prijedor/Kozarac karakteriše kvalitet voznog parka, cijene i uslovi za najam, te ljubazni uposlenici uvijek spremni da odgovore na zahtjeve klijenata.</br>
-
-					Dugogodišnje iskustvo uposlenika u iznajmljivanju vozila omogućuje nam da predvidimo sve Vaše potrebe i ispunimo ih.</br>
-
-					Između ostalog nudimo usluge:</br>
-
-					</p>
-				<ul>
-					<li>Šlep službe;</li>
-					<li>Prevoza na udaljene lokacije (aerodromi...);</li>
-					<li>Uvoza i prodaje vozila iz inostranstva;</li>
-				</ul>
-
+			<div class="col-xs-12">
 
 			</div>
 		</div>
@@ -107,11 +80,22 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				asdasdasdasd
+				<p>prodaja vozila</p>
 			</div>
 		</div>
 	</div>
 </section>
+
+<section id="rent-a-car">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<p>rent-a-car</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section id="ponuda">
 	<div class="container">
 		<div class="row">
