--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/frontendOnly.js"></script>
+
 </head>
 <body>
 
+<div class="wrapperOuter">
+    <div class="row">
 
-<section class="wrapperOuter">
-    <div class="wrapperInner">
-
-        <div class="header">
+        <section class="header">
             <h1>inspection request</h1>
-            <button class="btn btn-default">back</button>
-        </div>
+            <button class="btn btn-primary btn-main">back</button>
+        </section>
 
-        <div class="main">
+        <section class="content">
             <form>
 
-                <div class="leftColumn">
+                <div class="column">
                     <div class="form-group">
                         <label for="projectName">Project Name:</label>
                         <select class="form-control selectpicker" id="projectName" title="Select Project Name">
@@ -60,14 +63,14 @@
                     </div>
                 </div>
 
-                <div class="rightColumn">
+                <div class="column">
                     <div class="form-group">
                         <label for="description">Description</label>
                         <input type="text" class="form-control" id="description" placeholder="Description">
                     </div>
-                    <div class="form-group date">
+                    <div class="form-group">
                         <label for="inspectionDate">Inspection Date:</label>
-                        <input type="text" class="form-control datepicker" data-provide="datepicker" id="inspectionDate" data-date-format="mm/dd/yyyy">
+                        <input type="text" class="form-control datepicker" placeholder="Date" id="inspectionDate" data-date-format="mm/dd/yyyy">
                     </div>
                     <div class="form-group">
                         <label for="consultantCompany">Consultant(Company):</label>
@@ -78,62 +81,179 @@
                             <option value="1">4</option>
                         </select>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group">s
                         <label for="preparedBy">Prepared By:</label>
                         <input type="text" class="form-control" id="preparedBy" placeholder="Prepared By">
                     </div>
                 </div>
 
-                <div class="innerSection">
+                <!-- subsection of main content  -->
+                <div class="subSectionTitle">
+                    <p>Inspection Item:</p>
+                </div>
+                <div class="subSection">
                     <div class="row">
 
-                        <div class="col-xs-12">
+                        <div class="col-xs-10 col-md-11 repeatableWrapper">
                             <div class="row">
 
-                                <div class="col-xs-12 col-sm-2">
-                                    <div class="form-group">
-                                        <label for="inspectionItems">Inspection Items:</label>
-                                        <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                <!-- single inspection item -->
+                                <div class="repeatableItem">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="inspectionItems">Inspection Items:</label>
+                                                <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="area">Area:</label>
+                                                <textarea class="form-control" id="area" rows="2" placeholder="Area"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="zone">Zone</label>
+                                                <textarea class="form-control" id="zone" rows="2" placeholder="Zone"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="notes">Notes:</label>
+                                                <textarea class="form-control" id="notes" rows="2" placeholder="Notes"></textarea>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                                <!--endOf single inspection item -->
 
-                                <div class="col-xs-12 col-sm-3">
-                                    <div class="form-group">
-                                        <label for="inspectionItems">Description</label>
-                                        <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                <!-- single inspection item -->
+                                <div class="repeatableItem">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="inspectionItems">Inspection Items:</label>
+                                                <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="area">Area:</label>
+                                                <textarea class="form-control" id="area" rows="2" placeholder="Area"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="zone">Zone</label>
+                                                <textarea class="form-control" id="zone" rows="2" placeholder="Zone"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="notes">Notes:</label>
+                                                <textarea class="form-control" id="notes" rows="2" placeholder="Notes"></textarea>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                                <!--endOf single inspection item -->
 
-                                <div class="col-xs-12 col-sm-3">
-                                    <div class="form-group">
-                                        <label for="inspectionItems">Description</label>
-                                        <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                <!-- single inspection item -->
+                                <div class="repeatableItem">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="inspectionItems">Inspection Items:</label>
+                                                <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="area">Area:</label>
+                                                <textarea class="form-control" id="area" rows="2" placeholder="Area"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="zone">Zone</label>
+                                                <textarea class="form-control" id="zone" rows="2" placeholder="Zone"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-3">
+                                            <div class="form-group">
+                                                <label for="notes">Notes:</label>
+                                                <textarea class="form-control" id="notes" rows="2" placeholder="Notes"></textarea>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-
-                                <div class="col-xs-12 col-sm-3">
-                                    <div class="form-group">
-                                        <label for="inspectionItems">Description</label>
-                                        <textarea class="form-control" id="inspectionItems" rows="2" placeholder="Description"></textarea>
-                                    </div>
-                                </div>
-
-                                <div class="col-xs-1 pull-right">
-                                    <button class="btn btn-default pull-right">asd</button>
-                                </div>
+                                <!--endOf single inspection item -->
 
 
                             </div>
                         </div>
 
+                        <!-- button to add more inspection items -->
+                        <div class="col-xs-1 pull-right repeatableAddItem">
+                            <button class="btn btn-primary pull-right"></button>
+                        </div>
+                        <!-- endOf button to add more inspection items -->
+
+                    </div>
+                </div>
+                <!-- endOf subsection of main content  -->
+
+
+                <div class="column">
+                    <div class="form-group">
+                        <label for="consultant">Consultant:</label>
+                        <select class="form-control selectpicker" id="consultant" title="Select Consultant">
+                            <option value="1">1</option>
+                            <option value="1">2</option>
+                            <option value="1">3</option>
+                            <option value="1">4</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="constructionManager">Construction Manager:</label>
+                        <select class="form-control selectpicker" id="constructionManager" title="Select Construction Manager">
+                            <option value="1">1</option>
+                            <option value="1">2</option>
+                            <option value="1">3</option>
+                            <option value="1">4</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="attachments">Attachments:</label>
+                        <input type="file" id="attachments">
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-default">Submit</button>
+                <div class="column">
+                    <div class="form-group">
+                        <label for="contractor">Contractor:</label>
+                        <select class="form-control selectpicker" id="contractor" title="Select Contractor">
+                            <option value="1">1</option>
+                            <option value="1">2</option>
+                            <option value="1">3</option>
+                            <option value="1">4</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="comments">Comments:</label>
+                        <textarea class="form-control" id="comments" rows="2" placeholder="Comments"></textarea>
+                    </div>
+
+                </div>
+
+                <div class="fullWidth">
+                    <input type="submit" value="Save" class="btn btn-main"></input>
+                </div>
             </form>
-        </div>
+        </section>
 
     </div>
-</section>
+</div>
 </body>
 </html>
